--- a/grubly/public/css/grubly.css
+++ b/grubly/public/css/grubly.css
@@ -33,6 +33,10 @@ nav {
 	margin-left: auto;
 	cursor: pointer;
 	padding: 5px;
+	-webkit-backface-visibility: visible!important;
+	backface-visibility: visible!important;
+	-webkit-animation-name: flipInX;
+	animation-name: flipInX;
 }
 #nav-cart-icon {
 	height: 100%;
@@ -48,6 +52,78 @@ nav {
 	color: #8BC34A;
 }
 
+.animate {
+	-webkit-animation-duration: 1s;
+	animation-duration: 1s;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+
+@-webkit-keyframes flipInX {
+	0% {
+		-webkit-transform: perspective(400px) rotateX(90deg);
+		transform: perspective(400px) rotateX(90deg);
+		-webkit-animation-timing-function: ease-in;
+		animation-timing-function: ease-in;
+		opacity: 0
+	}
+
+	40% {
+		-webkit-transform: perspective(400px) rotateX(-20deg);
+		transform: perspective(400px) rotateX(-20deg);
+		-webkit-animation-timing-function: ease-in;
+		animation-timing-function: ease-in
+	}
+
+	60% {
+		-webkit-transform: perspective(400px) rotateX(10deg);
+		transform: perspective(400px) rotateX(10deg);
+		opacity: 1
+	}
+
+	80% {
+		-webkit-transform: perspective(400px) rotateX(-5deg);
+		transform: perspective(400px) rotateX(-5deg)
+	}
+
+	to {
+		-webkit-transform: perspective(400px);
+		transform: perspective(400px)
+	}
+}
+
+@keyframes flipInX {
+	0% {
+		-webkit-transform: perspective(400px) rotateX(90deg);
+		transform: perspective(400px) rotateX(90deg);
+		-webkit-animation-timing-function: ease-in;
+		animation-timing-function: ease-in;
+		opacity: 0
+	}
+
+	40% {
+		-webkit-transform: perspective(400px) rotateX(-20deg);
+		transform: perspective(400px) rotateX(-20deg);
+		-webkit-animation-timing-function: ease-in;
+		animation-timing-function: ease-in
+	}
+
+	60% {
+		-webkit-transform: perspective(400px) rotateX(10deg);
+		transform: perspective(400px) rotateX(10deg);
+		opacity: 1
+	}
+
+	80% {
+		-webkit-transform: perspective(400px) rotateX(-5deg);
+		transform: perspective(400px) rotateX(-5deg)
+	}
+
+	to {
+		-webkit-transform: perspective(400px);
+		transform: perspective(400px)
+	}
+}
 #cart-wrapper {
 	display: block !important;
 	z-index: 100;
@@ -75,7 +151,6 @@ nav {
 	flex-direction: column;
 	background: #fff;
 }
-
 #cart-wrapper.active {
 	pointer-events: all;
 	opacity: 1;
@@ -83,7 +158,6 @@ nav {
 .active #cart {
 	transform: translateX(0);
 }
-
 #cart-title {
 	box-sizing: border-box;
 	font-size: 36px;
@@ -94,7 +168,6 @@ nav {
 	border-bottom: 1px solid #e0e3dd;
 	margin-bottom: 20px;
 }
-
 #cart-close {
 	position: absolute;
 	right: 5px;
@@ -102,7 +175,6 @@ nav {
 	font-size: 30px;
 	cursor: pointer;
 }
-
 .cart-product {
 	padding: 5px 20px;
 	height: 80px;
@@ -113,6 +185,21 @@ nav {
 	grid-template-areas: "i n"
 	                     "i p";
 }
+#cart-clear {
+	cursor: pointer;
+	height: 40px;
+	background: #8BC34A;
+	font-size: 20px;
+	color: white;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	margin: 5px 20px;
+	border-radius: 4px;
+	border: 1px solid #558B2F;
+}
+
 
 .product {
 	padding: 10px 20px;
