--- a/grubly/public/css/grubly.css
+++ b/grubly/public/css/grubly.css
@@ -14,23 +14,24 @@ body {
 
 nav {
 	display: flex;
+	justify-content: flex-end;
 	box-sizing: border-box;
 	height: 70px;
 	padding: 10px 80px;
 	border-bottom: 1px solid #e0e3dd;
-	background: linear-gradient(45deg, rgba(139,195,74,1) 0, rgba(167,209,117,1) 300px, rgba(255,255,255,1) 350px);
+	background: linear-gradient(45deg, rgba(139,195,74,1) 0, rgba(139,195,74,1) 300px, rgba(255,255,255,1) 350px);
 }
 
+#nav-title {
+	margin-right: auto;
+}
 #nav-title-logo {
 	height: 100%;
 }
 
-
 #nav-cart {
 	position: relative;
 	width: 40px;
-	justify-self: flex-end;
-	margin-left: auto;
 	cursor: pointer;
 	padding: 5px;
 	-webkit-backface-visibility: visible!important;
@@ -50,6 +51,26 @@ nav {
 	border-radius: 4px;
 	font-size: 22px;
 	color: #8BC34A;
+}
+
+.nav-auth {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 20px;
+	margin-left: 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	background: #8BC34A;
+	text-decoration: none;
+	color: #fff;
+	font-size: 18px;
+	border-radius: 4px;
+	border: 1px solid #558B2F;
+}
+
+.nav-auth:last-child {
+	margin-right: 50px;
 }
 
 .animate {
@@ -250,3 +271,161 @@ nav {
 	height: 30px;
 	text-align: center;
 }
+
+
+
+
+.register, .login {
+	display: flex;
+	justify-content: center;
+	padding: 50px;
+}
+.form {
+	position: relative;
+	padding: 10px 30px 30px 30px;
+	color: #fff;
+	box-shadow: 0px 2px 2px 1px #9d9d9d;
+	border-radius: 4px;
+	background: #8BC34A;
+	border: 1px solid #558B2F;
+}
+.form button {
+	display: block;
+	padding: 10px 30px;
+	margin: 30px auto 0 auto;
+	background: #fff;
+	text-decoration: none;
+	color: #8BC34A;
+	font-size: 40px;
+	border-radius: 4px;
+	border: 1px solid #558B2F;
+	cursor: pointer;
+}
+
+input[type="checkbox"] {
+	position: relative;
+	width: 100px;
+	height: 44px;
+	margin: 0;
+}
+input[type="checkbox"]:before {
+	content: "Register as Restaurant";
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #8BC34A;
+	border-radius: 4px;
+	border: 1px solid #558B2F;
+	color: #fff;
+	font-size: 15px;
+	transition: all 50ms ease;
+	cursor: pointer;
+}
+.login input[type="checkbox"]:before {
+	content: "Remember Me";
+}
+.login input[type="checkbox"] {
+	width: 85px;
+}
+input[type="checkbox"]:checked:before {
+	box-shadow: inset 0 0 4px 2px #689F38;
+	background: #7cb342;
+}
+
+.type-corner {
+	position: absolute;
+	right: 10px;
+	top: 10px;
+}
+.title {
+	font-size: 40px;
+	padding: 0 100px 0 0;
+	margin-bottom: 20px;
+}
+
+input[type="text"], input[type="password"], input[type="email"] {
+	-webkit-font-smoothing: antialiased;
+	outline: none;
+	z-index: 1;
+	position: relative;
+	background: none;
+	width: 100%;
+	height: 60px;
+	border: 0;
+	color: #fff;
+	font-size: 24px;
+	font-weight: 400;
+	transition: all 200ms ease;
+	border-bottom: 2px solid #689F38;
+}
+input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus {
+	border-bottom: 2px solid #33691E;
+}
+.field {
+	padding-top: 10px;
+	position: relative;
+	margin-right: 10px;
+	color: #fff;
+}
+label {
+	-webkit-font-smoothing: antialiased;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font: inherit;
+	vertical-align: baseline;
+	position: absolute;
+	top: 0;
+	left: 0;
+	color: #558b2f;
+	transform: translate(-15%, -30%) scale(0.75);
+	font-size: 24px;
+	font-weight: 300;
+	line-height: 60px;
+	transition: 0.2s ease;
+}
+input:placeholder-shown ~ label {
+	color: #fff;
+	transform: translate(0, 0) scale(1);
+}
+input:focus ~ label {
+	color: #558b2f;
+	transform: translate(-15%, -30%) scale(0.75);
+}
+
+form strong {
+	color: #D84315;
+	font-size: small;
+	position: absolute;
+	bottom: 0;
+	transform: translateY(100%);
+	width: 100%;
+	left: 0;
+}
+
+.register .grid {
+	display: grid;
+	grid-template-columns: 2fr 1fr 120px;
+	grid-template-rows: repeat(5, auto);
+	grid-template-areas:
+	"n  a  a"
+	"e  s  s"
+	"p  st po"
+	"pc .  ."
+	"sub  sub sub";
+}
+.n {grid-area: n}
+.a {grid-area: a}
+.s {grid-area: s}
+.p {grid-area: p}
+.po {grid-area: po}
+.st {grid-area: st}
+.e {grid-area: e}
+.pc {grid-area: pc}
+.sub {grid-area: sub}
