--- a/grubly/public/css/grubly.css
+++ b/grubly/public/css/grubly.css
@@ -429,3 +429,66 @@ form strong {
 .e {grid-area: e}
 .pc {grid-area: pc}
 .sub {grid-area: sub}
+
+
+
+.own-restaurant,
+.pending-restaurants,
+.restaurant-list {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 50px;
+	justify-content: center;
+}
+
+
+.restaurant-preview {
+	position: relative;
+	padding: 10px 30px 30px 30px;
+	color: #fff;
+	box-shadow: 0px 2px 2px 1px #9d9d9d;
+	border-radius: 4px;
+	background: #8BC34A;
+	border: 1px solid #558B2F;
+	margin: 0 10px 10px 10px;
+	width: calc(50% - 82px);
+}
+.restaurant-preview a {
+	display: grid;
+	text-decoration: none;
+	color: #fff;
+	grid-template-columns: auto;
+	grid-template-rows: auto auto minmax(200px, 20vw);
+	grid-template-areas:
+	"name"
+	"addr"
+	"img";
+}
+.restaurant-preview-name {grid-area: name}
+.restaurant-preview-address {grid-area: addr}
+.restaurant-preview-img {grid-area: img}
+
+.restaurant-preview-name {
+	font-size: 40px;
+}
+.restaurant-preview-address {
+	font-size: small;
+}
+.restaurant-preview-img {
+	margin: 0px -30px -30px -30px;
+	border-radius: 0 0 4px 4px;
+	overflow: hidden;
+	display: flex;
+	flex-wrap: wrap;
+	width: calc(100% + 60px);
+	height: calc(100% + 30px);
+	background-size: cover;
+	background-position: center;
+}
+.restaurant-preview-img:before {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 30px;
+	background: linear-gradient(180deg, rgba(139,195,74,1) 0, rgba(139,195,74,0) 50%);
+}
