--- a/grubly/public/css/grubly.css
+++ b/grubly/public/css/grubly.css
@@ -240,7 +240,8 @@ nav {
 	justify-content: center;
 	padding: 50px;
 }
-.form {
+.register .form,
+.login .form {
 	position: relative;
 	padding: 10px 30px 30px 30px;
 	color: #fff;
@@ -538,6 +539,29 @@ h2 {
 	height: 200px;
 	z-index: 0;
 	box-sizing: border-box;
+	overflow: hidden;
+}
+.product.purchaseable:before {
+	content: "Add to order";
+	display: flex;
+	background: #0005;
+	box-sizing: border-box;
+	border: 2px solid #8BC34A;
+	z-index: 50;
+	justify-content: center;
+	text-align: center;
+	flex-direction: column;
+	font-size: 40px;
+	color: #fff;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
+	opacity: 0;
+	transition: opacity 200ms ease;
+}
+.product.purchaseable:hover:before {
+	opacity: 1;
 }
 
 .product .product-img {
@@ -555,6 +579,16 @@ h2 {
 	background-position: center;
 }
 
+.product strong {
+	color: #D84315;
+	bottom: unset;
+	font-size: 10px;
+	position: absolute;
+	transform: translate(60px, -1px);
+	width: 100%;
+	left: 0;
+}
+
 .product .product-name {
 	display: inline-block;
 	margin-top: -1px;
@@ -567,6 +601,48 @@ h2 {
 }
 .product .product-price {
 	font-size: 20px;
+}
+
+.product.editable input[type="text"],
+.product.editable input[type="password"],
+.product.editable input[type="email"] {
+	width: auto;
+	height: 40px;
+	font-size: 25px;
+	margin-top: 3px;
+}
+.product.editable input:placeholder-shown ~ label {
+	transform: translate(1px, -5px) scale(1);
+}
+.product.editable label,
+.product.editable input:focus ~ label {
+	transform: translate(-34%, -40%) scale(0.4);
+}
+
+.product.editable label {
+	top: unset;
+	left: 30px;
+}
+
+#create-product {
+	width: 200px;
+	height: 53px;
+	font-family: 'Roboto', sans-serif;
+	flex-direction: column;
+	padding: 0px 10px;
+	margin-left: 60px;
+	margin-top: 20px;
+	margin-bottom: -20px;
+	background: #8BC34A;
+	text-decoration: none;
+	color: #fff;
+	border-radius: 4px;
+	border: 1px solid #558B2F;
+	justify-content: center;
+	font-size: 40px;
+	display: inline-block;
+	vertical-align: bottom;
+	text-align: center;
 }
 
 .restaurant-products {
@@ -614,4 +690,8 @@ h2 {
 }
 .page-item.active {
 	color: #010101;
+}
+
+.delete a:before {
+	background: #FF5722;
 }
